@@ -4,6 +4,7 @@ Version 0.2.2~dev
 	* Do not loop forever waiting children's death, closes: #1850.
 	* Add support for audio volume parameter.
 	* Catch pre/post command failures, closes: #1849.
+	* Forbid scheduling of the same command twice, closes: #1852.
 
 Version 0.2.1 Released on 2009/04/09
 
